feat(a2a): add A2A protocol support with official Java SDK
- Implement A2A server gateway (message/send, message/stream, tasks/get, tasks/cancel, agent card discovery)
- Implement A2AClientAgent using official A2A Java SDK (io.github.a2asdk:0.3.3.Final)
- Support both streaming and non-streaming modes, multi-turn conversation via contextId/referenceTaskIds
- Add Spring Boot A2AController with @ConditionalOnProperty toggle (oxygent.server.enable-a2a-server)
- Add embedded Tomcat integration via RouteServlet for core module
- Use SDK types: TaskState, Task, Message, AgentCard, Artifact, TextPart
- Add 4 demo examples: server, client, stream client, task followup client
- Add A2A documentation (docs/docs_zh/15-01-a2a.md)
- Update NOTICE_Third_Party.md with A2A SDK license info